samples/_failures_safe/1761217549_b8e888_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3843a6e.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_b3843a6e.c:161:23: error: missing terminating ' character
  161 |     token->value[1] = '\
      |                       ^~
./samples/SAFE/__tmp_b3843a6e.c:161:5: error: expected expression at end of input
  161 |     token->value[1] = '\
      |     ^~~~~
./samples/SAFE/__tmp_b3843a6e.c:161:5: error: expected declaration or statement at end of input
